--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? %>
+	<h1>You're logged in!</h1>
+	<% else %>
 <div class="hero-unit">
 
 		<h1>Welcome to One Month Rails!</h1>
@@ -7,7 +10,8 @@
 			application.
 		</p>
 		<p>
-			<%= link_to "Sign up Now!", "#", class: "btn btn-primary btn-large" %>
+			<%= link_to "Sign up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
 		</p>
 
 </div>
+<% end %>
